editors/tree-sitter-runlet/test/corpus/language.txt
==================
Values and calls
==================

profile = {name: "Ada", active: true, scores: [91, 97]}
customer = crm.customer(profile.name)
return {profile, customer: customer.email}

---

(source_file
  (binding_statement
    name: (identifier)
    value: (object
      (object_item
        key: (field_name
          (identifier))
        value: (string))
      (object_item
        key: (field_name
          (identifier))
        value: (boolean))
      (object_item
        key: (field_name
          (identifier))
        value: (list
          (integer)
          (integer)))))
  (binding_statement
    name: (identifier)
    value: (call_expression
      function: (member_expression
        object: (identifier)
        property: (field_name
          (identifier)))
      (member_expression
        object: (identifier)
        property: (field_name
          (identifier)))))
  (return_statement
    (object
      (object_item
        shorthand: (identifier))
      (object_item
        key: (field_name
          (identifier))
        value: (member_expression
          object: (identifier)
          property: (field_name
            (identifier)))))))

==================
Control expressions
==================

rows = for item in items { return item.value * 2 }
assert(rows != [], "expected rows")
safe = boundary retry 2 { return 1 / divisor } catch err { return err.code }
return safe if enabled and true else rows

---

(source_file
  (binding_statement
    name: (identifier)
    value: (for_expression
      binding: (identifier)
      collection: (identifier)
      body: (block
        (return_statement
          (binary_expression
            left: (member_expression
              object: (identifier)
              property: (field_name
                (identifier)))
            right: (integer))))))
  (assert_statement
    condition: (binary_expression
      left: (identifier)
      right: (list))
    message: (string))
  (binding_statement
    name: (identifier)
    value: (boundary_expression
      retries: (integer)
      body: (block
        (return_statement
          (binary_expression
            left: (integer)
            right: (identifier))))
      error: (identifier)
      handler: (block
        (return_statement
          (member_expression
            object: (identifier)
            property: (field_name
              (identifier)))))))
  (return_statement
    (conditional_expression
      consequence: (identifier)
      condition: (binary_expression
        left: (identifier)
        right: (boolean))
      alternative: (identifier))))

==================
Fold break
==================

result = fold acc = 0 for x in [1, 2, 3] {
  break acc + x if x == 2
  return acc + x
}
return result

---

(source_file
  (binding_statement
    name: (identifier)
    value: (fold_expression
      accumulator: (identifier)
      initial: (integer)
      binding: (identifier)
      collection: (list
        (integer)
        (integer)
        (integer))
      body: (fold_block
        (break_statement
          value: (binary_expression
            left: (identifier)
            right: (identifier))
          condition: (binary_expression
            left: (identifier)
            right: (integer)))
        (return_statement
          (binary_expression
            left: (identifier)
            right: (identifier))))))
  (return_statement
    (identifier)))

==================
Fold break expression boundaries
==================

x = fold acc = 0 for v in [1] {
  break acc if true if false
  return acc
}
return x

---

(source_file
  (binding_statement
    (identifier)
    (fold_expression
      (identifier)
      (integer)
      (identifier)
      (list
        (integer))
      (fold_block
        (break_statement
          (identifier))
        (ERROR
          (conditional_expression
            (boolean)
            (boolean)))
        (return_statement
          (identifier)))))
  (return_statement
    (identifier)))

==================
Fold break parenthesized conditional
==================

x = fold acc = 0 for v in [1] {
  break (acc if true else v) if false
  return acc
}
return x

---

(source_file
  (binding_statement
    (identifier)
    (fold_expression
      (identifier)
      (integer)
      (identifier)
      (list
        (integer))
      (fold_block
        (break_statement
          (parenthesized_expression
            (conditional_expression
              (identifier)
              (boolean)
              (identifier)))
          (boolean))
        (return_statement
          (identifier)))))
  (return_statement
    (identifier)))
